--- a/src/components/page.css
+++ b/src/components/page.css
@@ -19,7 +19,7 @@
 .pageHeader {
   position: fixed;
   top:0;
-  height: 150px;
+  height: 290px;
   background: inherit;
   display: flex;
   justify-content: center;
@@ -37,7 +37,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: 150px 40px 50px 40px;
+  padding: 290px 40px 50px 40px;
 }
 
 a {text-decoration: none; color: #59922E;}
@@ -45,3 +45,13 @@ a:link {text-decoration: none; color: #59922E;}
 a:visited {text-decoration: none; color: #59922E;}
 a:hover {text-decoration: none; color: #59922E;}
 a:active {text-decoration: none; color: #59922E;}
+
+
+@media screen and (min-width: 768px) {
+  .pageHeader {
+    height: 190px;
+  }
+.contentsContainer {
+  padding: 190px 40px 50px 40px;
+  }
+}
